Got BigInt, BigDecimal working - use Long and java.math.BigDecimal

--- a/conf/dev.conf
+++ b/conf/dev.conf
@@ -24,6 +24,14 @@ db.default.url="jdbc:mysql://localhost:3306/titan_1_0"
 db.default.user=api
 db.default.password=api
 
+
+#db.default.driver=com.mysql.jdbc.Driver
+#db.default.url="jdbc:mysql://localhost:3305/report"
+#db.default.user=root
+#db.default.password=
+
+
+
 # Logger
 # ~~~~~
 # You can also configure logback (http://logback.qos.ch/), by providing a logger.xml file in the conf directory .
