First whack at using the report DB.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -2,10 +2,15 @@
 # ~~~~~
 application.secret="W^icdBRdaWi7nf342ocG>BA869wwry]9<Cqm7Xi<WbKFNPtgw^qqKdrI?YBy=79Z"
 
+#db.default.driver=com.mysql.jdbc.Driver
+#db.default.url="jdbc:mysql://localhost:3306/titan_1_0"
+#db.default.user=api
+#db.default.password=api
+
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost:3306/titan_1_0"
-db.default.user=api
-db.default.password=api
+db.default.url="jdbc:mysql://localhost:3305/report"
+db.default.user=root
+#db.default.password=
 
 logger.root=ERROR
 logger.play=INFO
