--- a/conf/dev.conf
+++ b/conf/dev.conf
@@ -19,16 +19,16 @@ application.secret="W^icdBRdaWi7nf342ocG>BA869wwry]9<Cqm7Xi<WbKFNPtgw^qqKdrI?YBy
 # By convention, the default datasource is named `default`
 #
 
-db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost:3306/titan_1_0"
-db.default.user=api
-db.default.password=api
-
-
 #db.default.driver=com.mysql.jdbc.Driver
-#db.default.url="jdbc:mysql://localhost:3305/report"
-#db.default.user=root
-#db.default.password=
+#db.default.url="jdbc:mysql://localhost:3306/titan_1_0"
+#db.default.user=api
+#db.default.password=api
+#
+
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://localhost:3305/report"
+db.default.user=root
+db.default.password=
 
 
 
