wrap dino calls; complete vt login

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -19,7 +19,9 @@ np.v1.path.register="n5iregister.jsp"
 vt.path.prefix="http://lfvtqagwt.lftechsupport.com/vtgwt"
 # Production:
 # vt.path.prefix="https://www.virtualtrainer.lifefitness.com/vt/"
+vt.path.validate="/api/account/validate_new_account"
 vt.path.register="/api/account/register"
+vt.path.link="/api/account/link_external_user"
 vt.path.login="/api/account/login"
 vt.path.logout="/api/account/logout"
 vt.path.predefinedPresets="/api/workout_preset/get_predefined_presets"
