Got one filter back working again.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -7,6 +7,7 @@ application.secret="W^icdBRdaWi7nf342ocG>BA869wwry]9<Cqm7Xi<WbKFNPtgw^qqKdrI?YBy
 #db.default.user=api
 #db.default.password=api
 
+# ssh -L 3305:localhost:3306 root@107.21.141.201
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://localhost:3305/report"
 db.default.user=root
