More VT error handling; prod configuration for dist

--- a/conf/prod.conf
+++ b/conf/prod.conf
@@ -1,6 +1,7 @@
+include "base.conf"
+
 # Production configuration!!!
 # ~~~~~
-application.secret="W^icdBRdaWi7nf342ocG>BA869wwry]9<Cqm7Xi<WbKFNPtgw^qqKdrI?YBy=79Z"
 
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://dev-db-master.netpulse.ws:3306/titan_1_0"
@@ -11,16 +12,7 @@ logger.root=ERROR
 logger.play=INFO
 logger.application=DEBUG
 
-# Routing to/from the old Netpulse API and to/from LifeFitness
-np.v1.scheme="http"
-#np.api.host="qa-ec2.netpulse.ws"
-np.v1.host="localhost:8080"
-np.v1.path.register="n5iregister.jsp"
-lf.path.prefix="http://lfvtqagwt.lftechsupport.com/vtgwt"
-# Production:
-# lf.path.prefix="https://www.virtualtrainer.lifefitness.com/vt/"
-lf.path.register="/api/account/register"
-vt.path.login="/api/account/login"
-vt.path.logout="/api/account/logout"
-vt.path.predefinedPresets="/api/workout_preset/get_predefined_presets"
-vt.path.workouts="/api/workout_preset/get_workouts"
+# When we go live with VirtualTrainer:
+# vt.path.prefix="https://www.virtualtrainer.lifefitness.com/vt/"
+
+
