--- a/conf/base.conf
+++ b/conf/base.conf
@@ -5,7 +5,7 @@ db.default.url="jdbc:mysql://localhost:3306/titan_1_0"
 db.default.user=api
 db.default.password=api
 
-# ssh -L 3305:localhost:3306 root@107.21.141.201
+# ssh -L 3305:localhost:3306 root@prd-db-report-ext.netpulse.ws
 db.report.driver=com.mysql.jdbc.Driver
 db.report.url="jdbc:mysql://localhost:3305/report"
 db.report.user=root
