better vt error hdlg; store/use vt token & secret

--- a/conf/base.conf
+++ b/conf/base.conf
@@ -17,7 +17,12 @@ logger.play=INFO
 logger.application=DEBUG
 
 
-vt.path.prefix="https://lfvtqagwt.lftechsupport.com/vtgwt"
+vt.path.prefix="https://vtqa.lftechsupport.com/vtgwt"
+#vt.path.prefix="https://lfvtqagwt.lftechsupport.com/vt"
+vt.timeout="20000"
+dino.timeout="19999"
+
+
 # Production:
 # vt.path.prefix="https://www.virtualtrainer.lifefitness.com/vt/"
 vt.path.validate="/api/account/validate_new_account"
