Start using the reporting DB user rather than root.

--- a/conf/base.conf
+++ b/conf/base.conf
@@ -8,8 +8,8 @@ db.default.password=api
 # ssh -L 3305:localhost:3306 root@prd-db-report-ext.netpulse.ws
 db.report.driver=com.mysql.jdbc.Driver
 db.report.url="jdbc:mysql://localhost:3305/report"
-db.report.user=root
-#db.report.password=
+db.report.user=ReportUser
+db.report.password=ReportUser
 
 
 logger.root=ERROR
