Return an error code to indicate user already VT registered

--- a/conf/base.conf
+++ b/conf/base.conf
@@ -1,9 +1,10 @@
 application.secret="W^icdBRdaWi7nf342ocG>BA869wwry]9<Cqm7Xi<WbKFNPtgw^qqKdrI?YBy=79Z"
 
+# ssh -L 3307:localhost:3306 root@107.21.134.19  (for qa-db-1; then root and no pwd)
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost:3306/titan_1_0"
-db.default.user=api
-db.default.password=api
+db.default.url="jdbc:mysql://localhost:3307/titan_1_0"
+db.default.user=root
+# db.default.password=api
 
 # ssh -L 3305:localhost:3306 root@prd-db-report-ext.netpulse.ws
 db.report.driver=com.mysql.jdbc.Driver
