Add info re: how to do session secret handling.

--- a/conf/prod.conf
+++ b/conf/prod.conf
@@ -5,8 +5,8 @@ include "base.conf"
 
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://dev-db-master.netpulse.ws:3306/titan_1_0"
-db.default.user=dev_db_app_user
-db.default.password=fit1nSF
+db.default.user=prd_db_app_user
+db.default.password=Pr0duct1on!
 
 logger.root=ERROR
 logger.play=INFO
