--- a/conf/base.conf
+++ b/conf/base.conf
@@ -92,6 +92,7 @@ db.default.initSQL=SELECT 1
 
 # If enabled, log SQL statements being executed.
 db.default.logStatements=false
+db.report.logStatements=true
 
 # The maxiumum connection age (in seconds).
 db.default.maxConnectionAge=60
