--- a/conf/prod.conf
+++ b/conf/prod.conf
@@ -6,7 +6,12 @@ include "base.conf"
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://dev-db-master.netpulse.ws:3306/titan_1_0"
 db.default.user=prd_db_app_user
-db.default.password=Pr0duct1on!
+db.default.password="Pr0duct1on!"
+
+db.report.driver=com.mysql.jdbc.Driver
+db.report.url="jdbc:mysql://prd-db-report.netpulse.ws:3306/report"
+db.report.user=ReportUser
+db.report.password=ReportUser
 
 logger.root=ERROR
 logger.play=INFO
