--- a/conf/prod.conf
+++ b/conf/prod.conf
@@ -4,7 +4,7 @@ include "base.conf"
 # ~~~~~
 
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://dev-db-master.netpulse.ws:3306/titan_1_0"
+db.default.url="jdbc:mysql://prd-db-master.netpulse.ws:3306/titan_1_0"
 db.default.user=prd_db_app_user
 db.default.password="Pr0duct1on!"
 
