partially implemented validate in User

--- a/conf/base.conf
+++ b/conf/base.conf
@@ -13,8 +13,8 @@ db.report.user=ReportUser
 db.report.password=ReportUser
 
 
-logger.root=ERROR
-logger.play=INFO
+logger.root=DEBUG
+logger.play=ERROR
 logger.application=DEBUG
 
 
