continued debugging vt account linking

--- a/conf/base.conf
+++ b/conf/base.conf
@@ -13,7 +13,7 @@ db.report.user=ReportUser
 db.report.password=ReportUser
 
 
-logger.root=DEBUG
+logger.root=ERROR
 logger.play=ERROR
 logger.application=DEBUG
 
