Working on user edit form using form helpers.

--- a/conf/base.conf
+++ b/conf/base.conf
@@ -7,10 +7,10 @@ db.default.user=api
 db.default.password=api
 
 # ssh -L 3305:localhost:3306 root@prd-db-report-ext.netpulse.ws
-#db.report.driver=com.mysql.jdbc.Driver
-#db.report.url="jdbc:mysql://localhost:3305/report"
-#db.report.user=ReportUser
-#db.report.password=ReportUser
+db.report.driver=com.mysql.jdbc.Driver
+db.report.url="jdbc:mysql://localhost:3305/report"
+db.report.user=ReportUser
+db.report.password=ReportUser
 
 
 logger.root=ERROR
@@ -92,7 +92,7 @@ db.default.initSQL=SELECT 1
 
 # If enabled, log SQL statements being executed.
 db.default.logStatements=false
-#db.report.logStatements=true
+db.report.logStatements=false
 
 # The maxiumum connection age (in seconds).
 db.default.maxConnectionAge=60
