--- a/conf/base.conf
+++ b/conf/base.conf
@@ -1,4 +1,5 @@
 application.secret="W^icdBRdaWi7nf342ocG>BA869wwry]9<Cqm7Xi<WbKFNPtgw^qqKdrI?YBy=79Z"
+application.langs=en-US
 
 # ssh -L 3307:localhost:3306 root@107.21.134.19  (for qa-db-1; then root and no pwd)
 db.default.driver=com.mysql.jdbc.Driver
