Changed User fields to be options matching DB config which allows nulls.

--- a/conf/base.conf
+++ b/conf/base.conf
@@ -93,7 +93,7 @@ db.default.initSQL=SELECT 1
 
 # If enabled, log SQL statements being executed.
 db.default.logStatements=false
-db.report.logStatements=false
+db.report.logStatements=true
 
 # The maxiumum connection age (in seconds).
 db.default.maxConnectionAge=60
