initial api for registering with vt after-the-fact

--- a/conf/prod.conf
+++ b/conf/prod.conf
@@ -18,6 +18,6 @@ logger.play=INFO
 logger.application=DEBUG
 
 # When we go live with VirtualTrainer:
-vt.path.prefix="https://www.virtualtrainer.lifefitness.com/vt/"
+# vt.path.prefix="https://www.virtualtrainer.lifefitness.com/vt/"
 
 
