added vt_status to exerciser; enhanced status reporting from virtual trainer calls

--- a/conf/base.conf
+++ b/conf/base.conf
@@ -14,9 +14,9 @@ db.report.user=ReportUser
 db.report.password=ReportUser
 
 
-logger.root=TRACE
-logger.play=DEBUG
-logger.application=TRACE
+logger.root=ERROR
+logger.play=ERROR
+logger.application=DEBUG
 
 
 
