--- a/conf/qa.conf
+++ b/conf/qa.conf
@@ -2,6 +2,7 @@ include "base.conf"
 
 # QA server configuration
 # ~~~~~
+-DapplyEvolutions.default=true
 
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://dev-db-master.netpulse.ws:3306/titan_1_0"
