--- a/conf/prod.conf
+++ b/conf/prod.conf
@@ -2,6 +2,7 @@ include "base.conf"
 
 # Production configuration!!!
 # ~~~~~
+-DapplyEvolutions.default=true
 
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://prd-db-master.netpulse.ws:3306/titan_1_0"
