channel saving; code cleanup; vt registration using nplogin; misc

--- a/conf/base.conf
+++ b/conf/base.conf
@@ -13,6 +13,11 @@ db.report.url="jdbc:mysql://localhost:3305/report"
 db.report.user=ReportUser
 db.report.password=ReportUser
 
+# ssh -L 3305:localhost:3306 root@prd-db-report-ext.netpulse.ws
+db.S2.driver=com.mysql.jdbc.Driver
+db.S2.url="jdbc:mysql://localhost:3305/S2"
+db.S2.user=ReportUser
+db.S2.password=ReportUser
 
 logger.root=ERROR
 logger.play=ERROR
