--- a/conf/prod.conf
+++ b/conf/prod.conf
@@ -14,6 +14,12 @@ db.report.url="jdbc:mysql://prd-db-report.netpulse.ws:3306/report"
 db.report.user=ReportUser
 db.report.password=ReportUser
 
+db.S2.driver=com.mysql.jdbc.Driver
+db.S2.url="jdbc:mysql://prd-db-report.netpulse.ws:3306/S2
+db.S2.user=ReportUser
+db.S2.password=ReportUser
+
+
 logger.root=ERROR
 logger.play=INFO
 logger.application=DEBUG
