--- a/conf/qa.conf
+++ b/conf/qa.conf
@@ -15,6 +15,13 @@ db.report.url="jdbc:mysql://prd-db-report.netpulse.ws:3306/report"
 db.report.user=ReportUser
 db.report.password=ReportUser
 
+# ssh -L 3305:localhost:3306 root@prd-db-report-ext.netpulse.ws
+db.S2.driver=com.mysql.jdbc.Driver
+db.S2.url="jdbc:mysql://localhost:3305/S2"
+db.S2.user=ReportUser
+db.S2.password=ReportUser
+
+
 logger.root=ERROR
 logger.play=INFO
 logger.application=DEBUG
