Set logging options higher.

--- a/conf/base.conf
+++ b/conf/base.conf
@@ -14,11 +14,11 @@ db.report.user=ReportUser
 db.report.password=ReportUser
 
 
-logger.root=TRACE
-logger.play=DEBUG
-logger.application=TRACE
+logger.root=ERROR
+logger.play=ERROR
+logger.application=DEBUG
 
-
+future.escapeInTemplates=true
 
 vt.path.prefix="https://vtqa.lftechsupport.com/vtgwt"
 #vt.path.prefix="https://lfvtqagwt.lftechsupport.com/vt"
