Debugged channel setting and getting

--- a/conf/base.conf
+++ b/conf/base.conf
@@ -20,7 +20,7 @@ db.S2.user=ReportUser
 db.S2.password=ReportUser
 
 logger.root=ERROR
-logger.play=ERROR
+logger.play=DEBUG
 logger.application=DEBUG
 
 
