switched to s2 lowercase; misc conf file fixes to get it running in qa

--- a/conf/prod.conf
+++ b/conf/prod.conf
@@ -2,7 +2,7 @@ include "base.conf"
 
 # Production configuration!!!
 # ~~~~~
--DapplyEvolutions.default=true
+applyEvolutions.default=true
 
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://prd-db-master.netpulse.ws:3306/titan_1_0"
@@ -14,10 +14,10 @@ db.report.url="jdbc:mysql://prd-db-report.netpulse.ws:3306/report"
 db.report.user=ReportUser
 db.report.password=ReportUser
 
-db.S2.driver=com.mysql.jdbc.Driver
-db.S2.url="jdbc:mysql://prd-db-report.netpulse.ws:3306/S2
-db.S2.user=ReportUser
-db.S2.password=ReportUser
+db.s2.driver=com.mysql.jdbc.Driver
+db.s2.url="jdbc:mysql://prd-db-report.netpulse.ws:3306/s2"
+db.s2.user=ReportUser
+db.s2.password=ReportUser
 
 
 logger.root=ERROR
