--- a/conf/qa.conf
+++ b/conf/qa.conf
@@ -2,7 +2,7 @@ include "base.conf"
 
 # QA server configuration
 # ~~~~~
--DapplyEvolutions.default=true
+applyEvolutions.default=true
 
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://dev-db-master.netpulse.ws:3306/titan_1_0"
@@ -16,10 +16,10 @@ db.report.user=ReportUser
 db.report.password=ReportUser
 
 # ssh -L 3305:localhost:3306 root@prd-db-report-ext.netpulse.ws
-db.S2.driver=com.mysql.jdbc.Driver
-db.S2.url="jdbc:mysql://localhost:3305/S2"
-db.S2.user=ReportUser
-db.S2.password=ReportUser
+db.s2.driver=com.mysql.jdbc.Driver
+db.s2.url="jdbc:mysql://prd-db-report.netpulse.ws:3306/s2"
+db.s2.user=ReportUser
+db.s2.password=ReportUser
 
 
 logger.root=ERROR
