--- a/conf/base.conf
+++ b/conf/base.conf
@@ -14,10 +14,10 @@ db.report.user=ReportUser
 db.report.password=ReportUser
 
 # ssh -L 3305:localhost:3306 root@prd-db-report-ext.netpulse.ws
-db.S2.driver=com.mysql.jdbc.Driver
-db.S2.url="jdbc:mysql://localhost:3305/S2"
-db.S2.user=ReportUser
-db.S2.password=ReportUser
+db.s2.driver=com.mysql.jdbc.Driver
+db.s2.url="jdbc:mysql://localhost:3305/s2"
+db.s2.user=ReportUser
+db.s2.password=ReportUser
 
 logger.root=ERROR
 logger.play=DEBUG
