temporarily cripple all db evolutions until can be debugged

--- a/conf/base.conf
+++ b/conf/base.conf
@@ -1,6 +1,8 @@
 application.secret="W^icdBRdaWi7nf342ocG>BA869wwry]9<Cqm7Xi<WbKFNPtgw^qqKdrI?YBy=79Z"
 application.langs=en-US
 
+evolutionplugin=disabled
+
 # ssh -L 3307:localhost:3306 root@107.21.134.19  (for qa-db-1; then root and no pwd)
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://localhost:3306/titan_1_0"
