--- a/conf/base.conf
+++ b/conf/base.conf
@@ -48,93 +48,9 @@ vt.consumer.key="NETPULSEAPI"
 vt.consumer.secret="f0e51dd38e6ff86b256e9"
 
 
-# Set a connection's default autocommit setting
-#db.default.autocommit=true
-#db.report.autocommit=true
-#db.s2.autocommit=true
-
-# Set a connection's default isolation level
-#db.default.isolation=READ_COMMITTED
-#db.report.isolation=READ_COMMITTED
-#db.s2.isolation=READ_COMMITTED
-
-# In order to reduce lock contention and thus improve performance,
-# each incoming connection request picks off a connection from a
-# pool that has thread-affinity.
-# The higher this number, the better your performance will be for the
-# case when you have plenty of short-lived threads.
-# Beyond a certain threshold, maintenance of these pools will start
-# to have a negative effect on performance (and only for the case
-# when connections on a partition start running out).
-db.default.partitionCount=3
-db.report.partitionCount=3
-#db.s2.partitionCount=3
-
-# The number of connections to create per partition. Setting this to
-# 5 with 3 partitions means you will have 15 unique connections to the
-# database. Note that BoneCP will not create all these connections in
-# one go but rather start off with minConnectionsPerPartition and
-# gradually increase connections as required.
-db.default.maxConnectionsPerPartition=5
-db.report.maxConnectionsPerPartition=5
-#db.s2.maxConnectionsPerPartition=5
-
-# The number of initial connections, per partition.
-db.default.minConnectionsPerPartition=5
-db.report.minConnectionsPerPartition=5
-#db.s2.minConnectionsPerPartition=5
-
-# When the available connections are about to run out, BoneCP will
-# dynamically create new ones in batches. This property controls
-# how many new connections to create in one go (up to a maximum of
-# maxConnectionsPerPartition). Note: This is a per-partition setting.
-db.default.acquireIncrement=1
-db.report.acquireIncrement=1
-#db.s2.acquireIncrement=1
-
-# After attempting to acquire a connection and failing, try to
-# connect this number of times before giving up.
-db.default.acquireRetryAttempts=10
-db.report.acquireRetryAttempts=10
-#db.s2.acquireRetryAttempts=10
-
-# How long to wait (in milliseconds) before attempting to obtain a
-# connection again after a failure.
-db.default.acquireRetryDelay=5000
-db.report.acquireRetryDelay=5000
-#db.s2.acquireRetryDelay=5000
-
-# The maximum time (in milliseconds) to wait before a call
-# to getConnection is timed out.
-db.default.connectionTimeout=1000
-db.report.connectionTimeout=1000
-#db.s2.connectionTimeout=1000
-
-# Idle max age (in seconds).
-db.default.idleMaxAge=60
-db.report.idleMaxAge=60
-#db.s2.idleMaxAge=60
-
-# An initial SQL statement that is run only when
-# a connection is first created.
-db.default.initSQL=SELECT 1
-db.report.initSQL=SELECT 1
-#db.s2.initSQL=SELECT 1
-
 # If enabled, log SQL statements being executed.
-db.default.logStatements=false
-db.report.logStatements=false
+#db.default.logStatements=false
+#db.report.logStatements=false
 #db.s2.logStatements=false
-
-# The maxiumum connection age (in seconds).
-db.default.maxConnectionAge=60
-db.report.maxConnectionAge=60
-#db.s2.maxConnectionAge=60
-
-
-
-# Logger                - https://github.com/playframework/Play20/wiki/SettingsLogger
-# ~~~~~
-# You can also configure logback (http://logback.qos.ch/), by providing a logger.xml file in the conf directory .
 
 
