Logback extensions added to s2. Dev config for JSON tested. QA, STG and PROD not tested.

--- a/conf/stg.conf
+++ b/conf/stg.conf
@@ -17,6 +17,9 @@ logger.root=ERROR
 logger.play=INFO
 logger.application=DEBUG
 
+logger.logglyAppender.inputKey="24c0a930-cfe2-4474-a117-9cf7dbe6b9cc"
+
+
 # When we go live with VirtualTrainer:
 # vt.path.prefix="https://www.virtualtrainer.lifefitness.com/vt/"
 
