begin integrating with gigya sdk and providing gigya proxy call

--- a/conf/qa.conf
+++ b/conf/qa.conf
@@ -5,7 +5,7 @@ include "base.conf"
 applyEvolutions.default=true
 
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://dev-db-master.netpulse.ws:3306/titan_1_0"
+db.default.url="jdbc:mysql://qa-db-master.netpulse.ws:3306/titan_1_0"
 db.default.user=dev_db_app_user
 db.default.password=fit1nSF
 
