--- a/conf/base.conf
+++ b/conf/base.conf
@@ -48,13 +48,13 @@ vt.consumer.key="NETPULSEAPI"
 vt.consumer.secret="f0e51dd38e6ff86b256e9"
 
 # Gigya integration
-gigya.api.key="netpulse.ws: 2_7kdDan99DJTVE_z9QKYSno1AvTyz8h5bM9UiEfq_HaTfQgIeeCmRY7wvf11WJhcz"
+gigya.api.key="2_7kdDan99DJTVE_z9QKYSno1AvTyz8h5bM9UiEfq_HaTfQgIeeCmRY7wvf11WJhcz"
 gigya.api.secret="zWhIz57A8UsZG3nJQpUWNfVo0rv4cvzgQeygwHoztgI="
 
 
 # If enabled, log SQL statements being executed.
 #db.default.logStatements=false
 #db.report.logStatements=false
-#db.s2.logStatements=false
+db.s2.logStatements=true
 
 
