debugged basic authorization logic against the s2 rights table(s)

--- a/conf/base.conf
+++ b/conf/base.conf
@@ -17,6 +17,7 @@ db.report.password=ReportUser
 
 # ssh -L 3305:localhost:3306 root@prd-db-report-ext.netpulse.ws
 db.s2.driver=com.mysql.jdbc.Driver
+//db.s2.url="jdbc:mysql://localhost:3305/s2?profileSQL=true"
 db.s2.url="jdbc:mysql://localhost:3305/s2"
 db.s2.user=ReportUser
 db.s2.password=ReportUser
@@ -53,8 +54,8 @@ gigya.api.secret="zWhIz57A8UsZG3nJQpUWNfVo0rv4cvzgQeygwHoztgI="
 
 
 # If enabled, log SQL statements being executed.
-#db.default.logStatements=false
-#db.report.logStatements=false
+db.default.logStatements=true
+db.report.logStatements=true
 db.s2.logStatements=true
 
 
