custom unauthorized page; restored test functionality

--- a/conf/base.conf
+++ b/conf/base.conf
@@ -17,7 +17,7 @@ db.report.password=ReportUser
 
 # ssh -L 3305:localhost:3306 root@prd-db-report-ext.netpulse.ws
 db.s2.driver=com.mysql.jdbc.Driver
-//db.s2.url="jdbc:mysql://localhost:3305/s2?profileSQL=true"
+#db.s2.url="jdbc:mysql://localhost:3305/s2?profileSQL=true"
 db.s2.url="jdbc:mysql://localhost:3305/s2"
 db.s2.user=ReportUser
 db.s2.password=ReportUser
