created stable accounts for testing in prd & qa; restored security testing; misc test corrections

--- a/conf/base.conf
+++ b/conf/base.conf
@@ -22,6 +22,11 @@ db.s2.url="jdbc:mysql://localhost:3305/s2"
 db.s2.user=ReportUser
 db.s2.password=ReportUser
 
+# These will need to change if the db to which s2 is connecting changes. See prod.conf or qa.conf
+# These values are currently assuming a connection to prd-db-report
+user.report.cookie="PLAY_SESSION=7861299e9d14d7716f0d23389576ffb2db9e825c-id%3A8234"
+user.test.cookie="PLAY_SESSION=b5742ffe798f8a357cc67e25d1ed9b85e8f35de6-id%3A8235"
+
 logger.root=ERROR
 logger.play=ERROR
 logger.application=DEBUG
