--- a/conf/qa.conf
+++ b/conf/qa.conf
@@ -21,6 +21,8 @@ db.s2.url="jdbc:mysql://prd-db-report.netpulse.ws:3306/s2"
 db.s2.user=ReportUser
 db.s2.password=ReportUser
 
+user.report.cookie="PLAY_SESSION=bf3abd46cddf71d38b2373118e42dae73b241562-id%3A8233"
+user.test.cookie="PLAY_SESSION=1b549de339b33a317d76ed29e5e9387a3ae9f233-id%3A8236"
 
 logger.root=ERROR
 logger.play=INFO
