crippled dennis' loggly conf statements

--- a/conf/prod.conf
+++ b/conf/prod.conf
@@ -26,7 +26,7 @@ logger.root=ERROR
 logger.play=INFO
 logger.application=DEBUG
 
-logger.logglyAppender.inputKey="9da86fa2-3c70-4d35-88eb-33379f391e5e"
+# logger.logglyAppender.inputKey="9da86fa2-3c70-4d35-88eb-33379f391e5e"
 
 
 # When we go live with VirtualTrainer:
