--- a/conf/qa.conf
+++ b/conf/qa.conf
@@ -28,7 +28,7 @@ logger.root=ERROR
 logger.play=INFO
 logger.application=DEBUG
 
-logger.logglyAppender.inputKey="0c46e10d-fc7f-42ef-81c1-2cec46c660b3"
+# logger.logglyAppender.inputKey="0c46e10d-fc7f-42ef-81c1-2cec46c660b3"
 
 # When we go live with VirtualTrainer:
 # vt.path.prefix="https://www.virtualtrainer.lifefitness.com/vt/"
