switch tests to qa only; add s2 route for gigyaProxy

--- a/conf/prod.conf
+++ b/conf/prod.conf
@@ -19,8 +19,10 @@ db.s2.url="jdbc:mysql://prd-db-report.netpulse.ws:3306/s2"
 db.s2.user=ReportUser
 db.s2.password=ReportUser
 
-user.report.cookie="PLAY_SESSION=7861299e9d14d7716f0d23389576ffb2db9e825c-id%3A8234"
-user.test.cookie="PLAY_SESSION=b5742ffe798f8a357cc67e25d1ed9b85e8f35de6-id%3A8235"
+# These cookies are disabled in production mode since we only support testing on QA.
+#
+#user.report.cookie="PLAY_SESSION=7861299e9d14d7716f0d23389576ffb2db9e825c-id%3A8234"
+#user.test.cookie="PLAY_SESSION=b5742ffe798f8a357cc67e25d1ed9b85e8f35de6-id%3A8235"
 
 logger.root=ERROR
 logger.play=INFO
