--- a/conf/qa.conf
+++ b/conf/qa.conf
@@ -9,20 +9,15 @@ db.default.url="jdbc:mysql://qa-db-master.netpulse.ws:3306/titan_1_0"
 db.default.user=dev_db_app_user
 db.default.password=fit1nSF
 
-# ssh -L 3305:localhost:3306 root@prd-db-report-ext.netpulse.ws
 db.report.driver=com.mysql.jdbc.Driver
-db.report.url="jdbc:mysql://prd-db-report.netpulse.ws:3306/report"
+db.report.url="jdbc:mysql://qa-db-report.netpulse.ws:3306/report"
 db.report.user=ReportUser
 db.report.password=ReportUser
 
-# ssh -L 3305:localhost:3306 root@prd-db-report-ext.netpulse.ws
 db.s2.driver=com.mysql.jdbc.Driver
-db.s2.url="jdbc:mysql://prd-db-report.netpulse.ws:3306/s2"
+db.s2.url="jdbc:mysql://qa-db-report.netpulse.ws:3306/s2"
 db.s2.user=ReportUser
 db.s2.password=ReportUser
-
-user.report.cookie="PLAY_SESSION=bf3abd46cddf71d38b2373118e42dae73b241562-id%3A8233"
-user.test.cookie="PLAY_SESSION=1b549de339b33a317d76ed29e5e9387a3ae9f233-id%3A8236"
 
 logger.root=ERROR
 logger.play=INFO
