--- a/conf/base.conf
+++ b/conf/base.conf
@@ -3,29 +3,32 @@ application.langs=en-US
 
 evolutionplugin=disabled
 
-# ssh -L 3307:localhost:3306 root@107.21.134.19  (for qa-db-1; then root and no pwd)
+# For development purposes, we assume the QA version of the titan database.
+# ssh -L 3307:localhost:3306 root@qa-db-1
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost:3306/titan_1_0"
-db.default.user=api
-db.default.password=api
+db.default.url="jdbc:mysql://localhost:3307/titan_1_0"
+db.default.user=dev_db_app_user
+db.default.password=fit1nSF
 
-# ssh -L 3305:localhost:3306 root@prd-db-report-ext.netpulse.ws
+# For development purposes, we assume the QA version of the report database
+# ssh -L 3305:localhost:3306 root@qa-db-report-ext.netpulse.ws
 db.report.driver=com.mysql.jdbc.Driver
 db.report.url="jdbc:mysql://localhost:3305/report"
 db.report.user=ReportUser
 db.report.password=ReportUser
 
-# ssh -L 3305:localhost:3306 root@prd-db-report-ext.netpulse.ws
+# For development purposes, we assume the QA version of the s2 database
+# ssh -L 3305:localhost:3306 root@qa-db-report-ext.netpulse.ws
 db.s2.driver=com.mysql.jdbc.Driver
 #db.s2.url="jdbc:mysql://localhost:3305/s2?profileSQL=true"
 db.s2.url="jdbc:mysql://localhost:3305/s2"
 db.s2.user=ReportUser
 db.s2.password=ReportUser
 
-# These will need to change if the db to which s2 is connecting changes. See prod.conf or qa.conf
-# These values are currently assuming a connection to prd-db-report
-user.report.cookie="PLAY_SESSION=7861299e9d14d7716f0d23389576ffb2db9e825c-id%3A8234"
-user.test.cookie="PLAY_SESSION=b5742ffe798f8a357cc67e25d1ed9b85e8f35de6-id%3A8235"
+# These cookie values assume the presence of certain s2@netpulse.com and s2a@netpulse.com persons
+# in the QA database (which is the only database we support for testing purposes)
+user.report.cookie="PLAY_SESSION=bf3abd46cddf71d38b2373118e42dae73b241562-id%3A8233"
+user.test.cookie="PLAY_SESSION=1b549de339b33a317d76ed29e5e9387a3ae9f233-id%3A8236"
 
 logger.root=ERROR
 logger.play=ERROR
@@ -59,8 +62,8 @@ gigya.api.secret="zWhIz57A8UsZG3nJQpUWNfVo0rv4cvzgQeygwHoztgI="
 
 
 # If enabled, log SQL statements being executed.
-db.default.logStatements=true
-db.report.logStatements=true
-db.s2.logStatements=true
+db.default.logStatements=false
+db.report.logStatements=false
+db.s2.logStatements=false
 
 
