building out the sql for test data setup; treat dates as nullable (in person)

--- a/conf/base.conf
+++ b/conf/base.conf
@@ -6,14 +6,14 @@ evolutionplugin=disabled
 # For development purposes, we assume the QA version of the titan database.
 # ssh -L 3307:localhost:3306 root@qa-db-1
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost:3307/titan_1_0"
+db.default.url="jdbc:mysql://localhost:3307/titan_1_0?zeroDateTimeBehavior=convertToNull"
 db.default.user=dev_db_app_user
 db.default.password=fit1nSF
 
 # For development purposes, we assume the QA version of the report database
 # ssh -L 3305:localhost:3306 root@qa-db-report-ext.netpulse.ws
 db.report.driver=com.mysql.jdbc.Driver
-db.report.url="jdbc:mysql://localhost:3305/report"
+db.report.url="jdbc:mysql://localhost:3305/report?zeroDateTimeBehavior=convertToNull"
 db.report.user=ReportUser
 db.report.password=ReportUser
 
@@ -21,7 +21,7 @@ db.report.password=ReportUser
 # ssh -L 3305:localhost:3306 root@qa-db-report-ext.netpulse.ws
 db.s2.driver=com.mysql.jdbc.Driver
 #db.s2.url="jdbc:mysql://localhost:3305/s2?profileSQL=true"
-db.s2.url="jdbc:mysql://localhost:3305/s2"
+db.s2.url="jdbc:mysql://localhost:3305/s2?zeroDateTimeBehavior=convertToNull"
 db.s2.user=ReportUser
 db.s2.password=ReportUser
 
