--- a/conf/prod.conf
+++ b/conf/prod.conf
@@ -5,17 +5,17 @@ include "base.conf"
 applyEvolutions.default=true
 
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://prd-db-master.netpulse.ws:3306/titan_1_0"
+db.default.url="jdbc:mysql://prd-db-master.netpulse.ws:3306/titan_1_0?zeroDateTimeBehavior=convertToNull"
 db.default.user=prd_db_app_user
 db.default.password="Pr0duct1on!"
 
 db.report.driver=com.mysql.jdbc.Driver
-db.report.url="jdbc:mysql://prd-db-report.netpulse.ws:3306/report"
+db.report.url="jdbc:mysql://prd-db-report.netpulse.ws:3306/report?zeroDateTimeBehavior=convertToNull"
 db.report.user=ReportUser
 db.report.password=ReportUser
 
 db.s2.driver=com.mysql.jdbc.Driver
-db.s2.url="jdbc:mysql://prd-db-report.netpulse.ws:3306/s2"
+db.s2.url="jdbc:mysql://prd-db-report.netpulse.ws:3306/s2?zeroDateTimeBehavior=convertToNull"
 db.s2.user=ReportUser
 db.s2.password=ReportUser
 
