--- a/conf/qa.conf
+++ b/conf/qa.conf
@@ -5,22 +5,22 @@ include "base.conf"
 applyEvolutions.default=true
 
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://qa-db-master.netpulse.ws:3306/titan_1_0"
+db.default.url="jdbc:mysql://qa-db-master.netpulse.ws:3306/titan_1_0?zeroDateTimeBehavior=convertToNull"
 db.default.user=dev_db_app_user
 db.default.password=fit1nSF
 
 db.report.driver=com.mysql.jdbc.Driver
-db.report.url="jdbc:mysql://qa-db-report.netpulse.ws:3306/report"
+db.report.url="jdbc:mysql://qa-db-report.netpulse.ws:3306/report?zeroDateTimeBehavior=convertToNull"
 db.report.user=ReportUser
 db.report.password=ReportUser
 
 db.s2.driver=com.mysql.jdbc.Driver
-db.s2.url="jdbc:mysql://qa-db-report.netpulse.ws:3306/s2"
+db.s2.url="jdbc:mysql://qa-db-report.netpulse.ws:3306/s2?zeroDateTimeBehavior=convertToNull"
 db.s2.user=ReportUser
 db.s2.password=ReportUser
 
 logger.root=ERROR
-logger.play=INFO
+logger.play=ERROR
 logger.application=DEBUG
 
 # logger.logglyAppender.inputKey="0c46e10d-fc7f-42ef-81c1-2cec46c660b3"
