support doing redirect to local dino copy, for testing dino changes

--- a/conf/base.conf
+++ b/conf/base.conf
@@ -36,6 +36,13 @@ vt.path.prefix="https://vtqa.lftechsupport.com/vtgwt"
 vt.timeout="20000"
 dino.timeout="19999"
 
+# We need to know where to find dino, for when we are translating calls that originate
+# on localhost. Usually they will be redirected to qa-s1, but there are times we want
+# to access a dino that is running locally, too. That usually occurs when we are testing
+# code changes to dino itself.
+dino.test.host="qa-s1.netpulse.ws"
+# dino.test.host="localhost:8080"
+
 
 # Production:
 # vt.path.prefix="https://www.virtualtrainer.lifefitness.com/vt/"
