In the middle of refactoring for the new table structures for person, company, role, rights and target.

--- a/conf/base.conf
+++ b/conf/base.conf
@@ -4,7 +4,7 @@ application.langs=en-US
 evolutionplugin=disabled
 
 # For development purposes, we assume the QA version of the titan database.
-# ssh -L 3307:localhost:3306 root@qa-db-1
+# ssh -L 3307:localhost:3306 root@qa-db-master-ext.netpulse.ws
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://localhost:3307/titan_1_0?zeroDateTimeBehavior=convertToNull"
 db.default.user=dev_db_app_user
