corrected staging conf

--- a/conf/stg.conf
+++ b/conf/stg.conf
@@ -4,17 +4,17 @@ include "base.conf"
 # ~~~~~
 
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://qa-db-master.netpulse.ws:3306/titan_1_0?zeroDateTimeBehavior=convertToNull"
+db.default.url="jdbc:mysql://stg-db-master.netpulse.ws:3306/titan_1_0?zeroDateTimeBehavior=convertToNull"
 db.default.user=stg_db_app_user
-db.default.password=fit1nSF
+db.default.password="J3ff3F@b"
 
 db.report.driver=com.mysql.jdbc.Driver
-db.report.url="jdbc:mysql://qa-db-report.netpulse.ws:3306/report?zeroDateTimeBehavior=convertToNull"
+db.report.url="jdbc:mysql://stg-db-report.netpulse.ws:3306/report?zeroDateTimeBehavior=convertToNull"
 db.report.user=ReportUser
 db.report.password=ReportUser
 
 db.s2.driver=com.mysql.jdbc.Driver
-db.s2.url="jdbc:mysql://qa-db-report.netpulse.ws:3306/s2?zeroDateTimeBehavior=convertToNull"
+db.s2.url="jdbc:mysql://stg-db-report.netpulse.ws:3306/s2?zeroDateTimeBehavior=convertToNull"
 db.s2.user=ReportUser
 db.s2.password=ReportUser
 
@@ -23,7 +23,7 @@ logger.root=ERROR
 logger.play=ERROR
 logger.application=DEBUG
 
-logger.logglyAppender.inputKey="24c0a930-cfe2-4474-a117-9cf7dbe6b9cc"
+# logger.logglyAppender.inputKey="24c0a930-cfe2-4474-a117-9cf7dbe6b9cc"
 
 
 # When we go live with VirtualTrainer:
