Work in progress -- deploy via ant.

--- a/conf/base.conf
+++ b/conf/base.conf
@@ -1,6 +1,8 @@
 application.secret="W^icdBRdaWi7nf342ocG>BA869wwry]9<Cqm7Xi<WbKFNPtgw^qqKdrI?YBy=79Z"
 application.langs=en-US
 
+application.server_list=localhost
+
 evolutionplugin=disabled
 
 # For development purposes, we assume the QA version of the titan database.
