more Person refactoring; lowered logging levels in loggly config

--- a/conf/stg.conf
+++ b/conf/stg.conf
@@ -21,7 +21,7 @@ db.s2.password=ReportUser
 
 logger.root=ERROR
 logger.play=ERROR
-logger.application=DEBUG
+logger.application=ERROR
 
 # logger.logglyAppender.inputKey="24c0a930-cfe2-4474-a117-9cf7dbe6b9cc"
 
