--- a/conf/qa.conf
+++ b/conf/qa.conf
@@ -21,7 +21,7 @@ db.s2.password=ReportUser
 
 logger.root=ERROR
 logger.play=ERROR
-logger.application=DEBUG
+logger.application=ERROR
 
 # logger.logglyAppender.inputKey="0c46e10d-fc7f-42ef-81c1-2cec46c660b3"
 
