add version number to status check.

--- a/conf/base.conf
+++ b/conf/base.conf
@@ -3,6 +3,9 @@ application.langs=en-US
 
 evolutionplugin=disabled
 
+# This is reported by the status check.
+appVersion="1.0.20"
+
 # Configuration documentation here: https://github.com/playframework/Play20/wiki/SettingsJDBC
 # Some BoneCP config discussion here: http://forum.jolbox.com/viewtopic.php?f=3&t=232
 # Mysql works best with as few connections as you can get away with.
