renamed some util functions; added VT timing tests

--- a/conf/base.conf
+++ b/conf/base.conf
@@ -34,7 +34,7 @@ db.s2.password=ReportUser
 
 logger.root=ERROR
 logger.play=ERROR
-logger.application=DEBUG
+logger.application=ERROR
 
 future.escapeInTemplates=true
 
