Turn on SQL logging, debug in Base and error on other platforms. Update build numbers.

--- a/conf/stg.conf
+++ b/conf/stg.conf
@@ -18,10 +18,13 @@ db.s2.url="jdbc:mysql://stg-db-report.netpulse.ws:3306/s2?autoReconnect=true&zer
 db.s2.user=ReportUser
 db.s2.password=ReportUser
 
+# Level of SQL statements to log
+logger.com.jolbox=ERROR
 
 logger.root=ERROR
 logger.play=ERROR
 logger.application=ERROR
+
 
 # logger.logglyAppender.inputKey="24c0a930-cfe2-4474-a117-9cf7dbe6b9cc"
 
