--- a/conf/qa.conf
+++ b/conf/qa.conf
@@ -19,9 +19,13 @@ db.s2.url="jdbc:mysql://qa-db-report.netpulse.ws:3306/s2?autoReconnect=true&zero
 db.s2.user=ReportUser
 db.s2.password=ReportUser
 
+# Level of SQL statements to log
+logger.com.jolbox=ERROR
+
 logger.root=ERROR
 logger.play=ERROR
 logger.application=ERROR
+
 
 # logger.logglyAppender.inputKey="0c46e10d-fc7f-42ef-81c1-2cec46c660b3"
 
