Set base sql logging level to error also.

--- a/conf/base.conf
+++ b/conf/base.conf
@@ -36,7 +36,7 @@ db.s2.password=ReportUser
 db.s2.logStatements=true
 
 # Level of SQL statements to log
-logger.com.jolbox=DEBUG
+logger.com.jolbox=ERROR
 
 logger.root=ERROR
 logger.play=ERROR
