removed explicit typing on safely() calls

--- a/conf/prod.conf
+++ b/conf/prod.conf
@@ -34,5 +34,6 @@ logger.application=DEBUG
 
 # When we go live with VirtualTrainer:
 # vt.path.prefix="https://www.virtualtrainer.lifefitness.com/vt/"
+vt.path.prefix="https://virtualtrainer.lifefitness.com/tablet/vt_api_docs/index.html"
 
 
